--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
           {% if site.show_downloads %}
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="{{ /contact.md }}" class="contact"><span class="icon"></span>Ways of Contact</a>
         </section>
       </div>
     </header>
@@ -43,4 +44,5 @@
       </script>
     {% endif %}
   </body>
+<meta name="description" content="A central source of info for modding AC. Treasure islands, save editing, and game mods.">
 </html>
