--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="shortcut icon" type="image/x-icon" href="../fasil.ico" />
 
 {% seo %}
   </head>
@@ -22,7 +23,7 @@
           {% if site.show_downloads %}
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-          <a href="../contact.md" class="contact"><span class="icon"></span>Ways of Contact</a>
+          <a href="../contact" class="contact"><span class="icon"></span>Ways of Contact</a>
         </section>
       </div>
     </header>
