--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,4 +46,6 @@
     {% endif %}
   </body>
 <meta name="description" content="A central source of info for modding AC. Treasure islands, save editing, and game mods.">
+<meta name="author" content="inconsistent_dg">
+<meta name="keywords" content="HTML, animal crossing, animal crossing new horizons, animal crossing: new horizons, animal crossing switch, animal crossing new leaf, animal crossing: new leaf">
 </html>
