--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,5 +47,5 @@
   </body>
 <meta name="description" content="A central source of info for modding AC. Treasure islands, save editing, and game mods.">
 <meta name="author" content="inconsistent_dg">
-<meta name="keywords" content="HTML, animal crossing, animal crossing new horizons, animal crossing: new horizons, animal crossing switch, animal crossing new leaf, animal crossing: new leaf">
+<meta name="keywords" content="animal crossing, animal crossing new horizons, animal crossing: new horizons, animal crossing switch, animal crossing new leaf, animal crossing: new leaf, treasure island, hacks, animal crossing hacks, animal crossing modding, ac modding, how to make a treasure island, how to install animal crossing mods, hacker, hacking, modder, modding, mods">
 </html>
