--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
           {% if site.show_downloads %}
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-          <a href="../contact" class="contact"><span class="icon"></span>Ways of Contact</a>
+          <a href="../contact" class="btn"></span>Ways of Contact</a>
         </section>
       </div>
     </header>
