--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,21 @@
 ---
 
 @import 'jekyll-theme-hacker';
+
+/*! ⬇️⬇️ Animal Crossing (tm). Nintendo (c) 2001 - 2021. Nintendo properties are trademarks of Nintendo. ⬇️⬇️ */
+
+@font-face {
+    font-family: 'Humming';
+    src: url('../fonts/Humming.otf') format('otf');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'Fink';
+    src: url('../fonts/FinkHeavy.ttf') format('ttf');
+    font-weight: normal;
+    font-style: normal;
+
+}
