--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,11 @@
       </script>
     {% endif %}
   </body>
+<meta content="AC-Modding: A central source of info for modding Animal Crossing." property="og:title">
+<meta property='og:image' content='https://raw.githubusercontent.com/inconsistent-dg/AC-Modding/main/assets/images/impossible.png'>
+<meta name="twitter:card" content="summary_large_image">
+<link type="application/json+oembed" href="https://raw.githubusercontent.com/inconsistent-dg/AC-Modding/main/dc.json"/>
+<meta name="theme-color" content="#0e2537">
 <meta name="author" content="inconsistent_dg">
-<meta name="keywords" content="animal crossing, animal crossing new horizons, animal crossing: new horizons, animal crossing switch, animal crossing new leaf, animal crossing: new leaf, treasure island, hacks, animal crossing hacks, animal crossing modding, ac modding, how to make a treasure island, how to install animal crossing mods, hacker, hacking, modder, modding, mods">
+<meta name="keywords" content="animal crossing, animal crossing new horizons, animal crossing: new horizons, animal crossing switch, animal crossing new leaf, animal crossing: new leaf, treasure island, hacks, animal crossing hacks, animal crossing modding, ac modding, how to make a treasure island, how to install animal crossing mods, hacker, hacking, modder, modding, mods, nintendo, nintendo switch, switch, animal crossing new horizons for the nintendo switch and nintendo switch lite handheld systems owned by and licenced by nintendo">
 </html>
