--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@ $(document.body).ready(function () {
 
   // load the trivia from the server
   $.ajax({
-    url: 'pages/misc/sehsalps.txt'
+    url: 'https://ac-modding.com/pages/misc/sehsalps.txt'
   }).done(function(content) {
 
     // normalize the line breaks, then split into lines
