--- a/_sass/_default_colors.scss
+++ b/_sass/_default_colors.scss
@@ -4,8 +4,8 @@ $bouquet: #aa759f;
 $chelsea-cucumber: #90a959;
 $cod-grey: #151515;
 $conifer: #b5e853;
-$dove-grey: #666;
-$gallery: #eaeaea;
+$dove-grey: #619420;
+$gallery: #fff;
 $grey: #888;
 $gulf-stream: #75b5aa;
 $hippie-blue: #6a9fb5;
