--- a/_sass/jekyll-theme-chirpy.scss
+++ b/_sass/jekyll-theme-chirpy.scss
@@ -22,3 +22,8 @@
   "layout/archives",
   "layout/categories",
   "layout/category-tag";
+
+video {
+  border-radius: 10px;
+  box-shadow: 0px 0px 13px rgba(0,0,0,0.15);
+}
